# auto_from

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
examples/: basic.rs  full_featured.rs  intermediate.rs  json_and_auto_from.rs
src/: accumulator_ext.rs  from_field_all.rs  lib.rs
tests/: compile_fail.rs  test_auto_from.rs  test_ext.rs
tests/compile_fail/: _01_no_auto_from_args.rs  _01_no_auto_from_args.stderr  _02_empty_auto_from_args.rs  _02_empty_auto_from_args.stderr  _03_duplicate_auto_from_arg.rs  _03_duplicate_auto_from_arg.stderr  _04_duplicate_auto_from_arg_2.rs  _04_duplicate_auto_from_arg_2.stderr  _05_duplicate_property.rs  _05_duplicate_property.stderr  _06_missing_property.rs  _06_missing_property.stderr  _07_conflicting_properties.rs  _07_conflicting_properties.stderr  _08_repeated_default_from_struct.rs  _08_repeated_default_from_struct.stderr  _09_repeated_from_struct.rs  _09_repeated_from_struct.stderr  _10_from_struct_not_auto_from_arg.rs  _10_from_struct_not_auto_from_arg.stderr  _11_combined_errors.rs  _11_combined_errors.stderr
