[package]
name = "struct_auto_from"
version = "1.0.0"
authors = [
    "Mateusz Grzyb <grzybmateusz@proton.me>",
    "Paulo Villela <pvillela@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple Rust library for auto generating conversion methods between structs."
homepage = "https://github.com/mateuszgrzyb/auto_from"
repository = "https://github.com/mateuszgrzyb/auto_from"
readme = "README.md"
keywords = ["macros", "from", "into", "struct", "convert"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = ["tests/**", "examples/json*", "CHANGELOG.md", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
